# manchester-united-analisis

./: .gitignore  README.md  analisis_united.ipynb  analisis_united.py  analisis_united_2014_2024.csv  app.py  dashboard.html  main.py  pyproject.toml  requirements.txt
data/raw/: streamlit_data.csv
models/: ppg_simulator.pkl
src/manutd_analysis/: __init__.py  analysis.py  dashboard_data.py  dashboard_plots.py  data.py  plots.py
src/ml/: train_model.py
tests/: test_analysis.py
