[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manutd_analysis"
version = "0.1.0"
authors = [
  { name="Alvaro Salinas Ortiz", email="alvarosalinasortiz@gmail.com" },
]
description = "Análisis de rendimiento del Manchester United (2014-2024)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]

[project.urls]
"Homepage" = "https://github.com/alvarosalinaso/manchester-united-analisis"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
